--- a/app/src/main/res/layout/custom_friend.xml
+++ b/app/src/main/res/layout/custom_friend.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="right"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
@@ -20,42 +20,46 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/friend_name"
-            android:textSize="@dimen/friend_name"/>
+            android:textSize="@dimen/friend_name"
+            />
 
         <TextView
             android:id="@+id/friend_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/friend_email"
-            android:textSize="@dimen/friend_email"/>
+            android:textSize="@dimen/friend_email"
+            />
 
         <TextView
             android:id="@+id/friend_phone"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:textColor="@color/friend_phone"/>
+            android:textColor="@color/friend_phone"
+            />
 
-        <LinearLayout
-            android:layout_width="0dp"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/edit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:orientation="horizontal">
+            android:background="@android:drawable/ic_menu_edit"/>
 
-            <Button
-                android:id="@+id/edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:drawable/ic_menu_edit"/>
+        <Button
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/ic_menu_delete"/>
 
-            <Button
-                android:id="@+id/delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:drawable/ic_menu_delete"/>
-
-        </LinearLayout>
 
     </LinearLayout>
 
